# WereWolf-Engine

./: .gitignore  LICENSE  README-fa.md  README.md  READMEEN.md  config.py  errors.py  example.py  game.py  mkdocs.yml  player.py  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml  wiki-sync.yml
docs/: API-Reference-fa.md  API-Reference.md  Contributing-fa.md  Contributing.md  Events-fa.md  Events.md  Getting-Started-fa.md  Getting-Started.md  Home-fa.md  Home.md  Roles-fa.md  Roles.md  _Sidebar.md  api-reference.en.md  api-reference.fa.md  contributing.en.md  contributing.fa.md  events.en.md  events.fa.md  getting-started.en.md  getting-started.fa.md  index.en.md  index.fa.md  requirements.txt  roles.en.md  roles.fa.md
phases/: __init__.py  day.py  lobby.py  night.py
roles/: __init__.py  base.py  doctor.py  hunter.py  werewolf.py  witch.py
tests/: conftest.py  test_day_voting.py  test_doctor.py  test_hunter.py  test_night_resolve.py  test_seer.py  test_werewolf.py  test_witch.py
werewolf_engine/: __init__.py  events.py  game.py
werewolf_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
werewolf_engine/phases/: day.py  night.py
werewolf_engine/roles/: hunter.py  seer.py  villager.py  werewolf.py  witch.py
