[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "werewolf-engine"
version = "0.1.0"
description = "A flexible, extensible Werewolf game engine for Python"
readme = "README.md"
license = "MIT"
authors = [
    {name = "ireza7", email = "reza38937@gmail.com"}
]
keywords = ["werewolf", "game", "engine", "mafia", "social-deduction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "black",
]

[project.urls]
Homepage = "https://github.com/ireza7/werewolf-engine"
"Bug Tracker" = "https://github.com/ireza7/werewolf-engine/issues"

[tool.setuptools.packages.find]
include = ["werewolf_engine*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"